--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 /* header */
 .header {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image:
         linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
         url(images/header-image.png);
@@ -286,3 +286,4 @@ input[type="radio"] {
         width: 100%;
     }
 }
+
